CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(KroshKing)

ADD_DEFINITIONS(-O2 -funsigned-char -Wall -W -Wshadow -Wpointer-arith -Winline -DGL_GLEXT_PROTOTYPES)

FIND_PACKAGE(GLUT REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
SET(GL_LIBS ${GLUT_LIBRARY} ${OPENGL_LIBRARY})

SET(SRC main.cpp)
ADD_EXECUTABLE(king_test ${SRC})
TARGET_LINK_LIBRARIES(king_test ${GL_LIBS})

